--- a/JSE_Stock_Screener.html
+++ b/JSE_Stock_Screener.html
@@ -45,7 +45,7 @@
         </header>
     
     <section class="stock">
-        <!-- TradingView Widget BEGIN -->
+        <!-- JSE Stock Screener -->
         <div class="tradingview-widget-container">
             <div class="tradingview-widget-container__widget"></div>
             <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js" async>{ 
@@ -60,7 +60,6 @@
                 }
             </script>
         </div>
-        <!-- TradingView Widget END -->
     </section>
         
     <script src="https://kit.fontawesome.com/6d06f9f594.js" crossorigin="anonymous"></script>
