--- a/Stock-Heatmap.html
+++ b/Stock-Heatmap.html
@@ -45,7 +45,7 @@
         </header>
     
     <section class="stock">
-        <!-- TradingView Widget BEGIN -->
+        <!-- Stock Heatmap -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-stock-heatmap.js" async>
@@ -67,7 +67,7 @@
 }
   </script>
 </div>
-<!-- TradingView Widget END -->
+
     </section>
         
     <script src="https://kit.fontawesome.com/6d06f9f594.js" crossorigin="anonymous"></script>
