--- a/contact.html
+++ b/contact.html
@@ -186,7 +186,7 @@
                 message: document.getElementById("message").value
             })
             
-            alert("Your message was sent successfully!");
+            alert("Your message was sent successfully!\n\nOne Of Our Consultant Will Contact You Via Email");
             
             document.getElementById("contactForm").reset();
         });
