--- a/about.html
+++ b/about.html
@@ -53,6 +53,10 @@
     <section class="about-us">
             <h1><span>SAAGROEG TRADING GROUP</span></h1> <p>is a leading financial consulting company specialixing in providing clients with profitable financial information and investment opportunities in the NEW York and Johannesburg stock exchanges. Our team of experienced financial advisors is dedicated to helping clients achieve their financial goals through customized investment strategies, exceptional service, and industry-leading expertise</p>
     </section>
+
+    <section class="about-us">
+            <h1>OUR HISTORY</h1> <p>Founded in 2018, SAAGROEG Trading Group has built a legacy of excellence in the financial consulting industry. Our founders envisioned a company that would not just offer financial advice but would truly partner with clients to secure their financial future. Over the years, we have grown, evolved, and adapted to the changing financial landscape, but our commitment to client success has remained constant.</p>
+    </section>
     
     <div class="about-row">
             <div class="about-col">
