--- a/education.html
+++ b/education.html
@@ -268,10 +268,10 @@
         </ul>
         <br>
         <ul>
-            <li><p><a href="#">Privacy Policy.</a></p></li>
-            <li><p><a href="#">Terms of Use.</a></p></li>
-            <li><p><a href="#">Regulatory Compliance.</a></p></li>
-            <li><p><a href="#">FAQ.</a></p></li>
+            <li><p><a href="Documents/SAAGROEG-TRADING-GROUP-Privacy-Policy.pdf" target="_blank">Privacy Policy.</a></p></li>
+            <li><p><a href="Documents/SAAGROEG-TRADING-GROUP-Terms-of-use.pdf" target="_blank">Terms of Use.</a></p></li>
+            <li><p><a href="Documents/SAAGROEG-TRADING-GROUP-Regulatory-Compliance.pdf" target="_blank">Regulatory Compliance.</a></p></li>
+            <li><p><a href="Documents/SAAGROEG-TRADING-GROUP-FAQ.pdf" target="_blank">FAQ.</a></p></li>
         </ul>
         <p>&copy; 2023 SAAGROEG TRADING GROUP Pty Ltd. All Rights Reserved.</p>
     </footer>
