--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <label>Password</label>
                         </div>
                         <div class="remember-forget2">
-                            <label><input type="checkbox" required>I agree to the <a href="#"><b>Terms & Conditions</b></a></label>
+                            <label><input type="checkbox" id="checkbox" required>I agree to the <a href="Documents/SAAGROEG-TRADING-GROUP-Terms-of-use.pdf" target="_blank"><b>Terms & Conditions</b></a></label>
                         </div>
                         <input type="submit" class="btn" id="register" value="Register">
                         <div class="login-register">
